added styling to remove button

--- a/style.css
+++ b/style.css
@@ -71,3 +71,16 @@ li:hover {
     text-decoration: line-through;
     color: grey;
 }
+.remove-btn {
+    background-color: #ff6b6b;
+    border: none;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.remove-btn:hover {
+    background-color: #d9534f;
+}
